--- a/style.css
+++ b/style.css
@@ -73,19 +73,105 @@ header nav a:hover {
     margin-top: 20px;
 
 }
-
-.locations{
-    display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px;
-    margin-left: 20px;
-}
 .location_section h1{
     padding: 30px;
 }
-.location {  border-radius: 10px; box-shadow: 0 3px 6px rgba(0,0,0,0.1); }
-.location img { width: 100%; height: 400px; object-fit: cover; border-radius: 10px 10px 0 0; }
-.location .info { padding: 20px; }
+.slider{
+    position: relative;
+  width: 100%;
+  padding: 20px 0;
+}
+
+.locations{
+    display: flex;
+  gap: 20px;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+  padding: 10px;
+}
+.locations::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
+
+.location {   min-width: 300px;
+  background: #fff;
+  border-radius: 12px;
+  overflow: hidden;
+  cursor: pointer;
+}
+.location :hover{
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+    text-decoration: underline;
+}
+.location img { width: 100%; height: 400px; object-fit: cover; border-radius: 20px; }
+.location .info { margin:  50px; }
 .location h3 { font-size: 22px; color: #333; }
 .location p { margin-top: 15px; font-size: 16px; color: #555; }
-/* .card button { margin-top: 15px; background: #2b4eff; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; }
-.card button:hover { background: #1a35b8; } */
+
+
+.arrow {
+  position: absolute;
+  top: 40%;
+  transform: translateY(-50%);
+  padding: 10px 14px;
+  background: rgb(58, 58, 58);
+  color: white;
+  border-radius: 50%;
+  text-decoration: none;
+  font-size: 22px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+}
+
+.arrow.left {
+  left: 0;
+}
+
+.arrow.right {
+  right: 0;
+}
+
+.search-container {
+    width: 600px;
+    height: 60px;
+    display: flex;
+    background: #fff;
+    border: 2px solid #ddd;
+    border-radius: 50px;
+    overflow: hidden;
+    padding: 0;
+}
+
+.search-container input {
+    flex: 1;
+    border: none;
+    padding: 0 25px;
+    font-size: 16px;
+    outline: none;
+    border-radius: 50px 0 0 50px;
+}
+
+.search-container button {
+    background: #1e1e1e;
+    color: white;
+    border: none;
+    padding: 0 30px;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    border-radius: 50px;
+}
+
+.search-container button:hover {
+    background: #000;
+}
+
+.icon {
+    font-size: 20px;
+}
+
+
 
